[gd_scene load_steps=11 format=3 uid="uid://8xvdm4xxnb50"]

[ext_resource type="Script" path="res://Characters/Disturbot/disturb_bot.gd" id="1_7vlmn"]
[ext_resource type="PackedScene" uid="uid://dfmomxs21oih1" path="res://Misc/SceneComponents/gluable_component.tscn" id="2_87m0h"]
[ext_resource type="PackedScene" uid="uid://c01lcudgwnk13" path="res://Misc/SceneComponents/holdable_component.tscn" id="2_afwlw"]
[ext_resource type="PackedScene" uid="uid://buiqnucfpsdl8" path="res://Misc/SceneComponents/interaction_component.tscn" id="2_navg4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_er0w3"]
radius = 0.3
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_my6as"]
albedo_color = Color(0.230501, 0.0100252, 0.0265541, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pb41m"]
material = SubResource("StandardMaterial3D_my6as")
radius = 0.3
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_exylf"]
albedo_color = Color(0.0627451, 0.156863, 0.235294, 1)

[sub_resource type="BoxMesh" id="BoxMesh_w431c"]
material = SubResource("StandardMaterial3D_exylf")
size = Vector3(0.4, 0.25, 0.4)

[sub_resource type="SphereShape3D" id="SphereShape3D_8s6b5"]
radius = 1.2

[node name="DisturbBot" type="CharacterBody3D" groups=["portable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
script = ExtResource("1_7vlmn")

[node name="HoldableComponent" parent="." instance=ExtResource("2_afwlw")]

[node name="InteractionComponent" parent="." instance=ExtResource("2_navg4")]

[node name="GluableComponent" parent="." node_paths=PackedStringArray("interaction_component") instance=ExtResource("2_87m0h")]
interaction_component = NodePath("../InteractionComponent")

[node name="DisturbBotCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_er0w3")

[node name="DisturbBotMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_pb41m")

[node name="DisturbBotFace" type="MeshInstance3D" parent="DisturbBotMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -0.1)
mesh = SubResource("BoxMesh_w431c")
skeleton = NodePath("../..")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="PathFindingTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="HoldingPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)

[node name="PickUpArea" type="Area3D" parent="."]

[node name="PickUpCollisionShape" type="CollisionShape3D" parent="PickUpArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.530657, 0)
shape = SubResource("SphereShape3D_8s6b5")

[connection signal="dropped" from="HoldableComponent" to="." method="_on_holdable_component_dropped"]
[connection signal="picked_up" from="HoldableComponent" to="." method="_on_holdable_component_picked_up"]
[connection signal="glued" from="GluableComponent" to="." method="_on_gluable_component_glued"]
[connection signal="unglued" from="GluableComponent" to="." method="_on_gluable_component_unglued"]
[connection signal="timeout" from="PathFindingTimer" to="." method="_on_path_finding_timer_timeout"]
[connection signal="body_entered" from="PickUpArea" to="." method="_on_pick_up_area_body_entered"]
